[package]
name = "sim-tests"
version = "0.1.0"
edition = "2021"

[lib]
crate-type= ["cdylib", "rlib"]

[dependencies]
uint = { version = "0.9.0", default-features = false }
near-sdk = "=4.0.0-pre.9"

[dev-dependencies]
lazy_static = "1.4.0"
near-sdk="=4.0.0-pre.9"
near-sdk-sim = "=4.0.0-pre.9"
rand = "0.8.5"
